# pyvelm

./: .dockerignore  .env.example  .env.testing.example  .gitignore  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  gunicorn_conf.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: acl.md  architecture.md  branding.md  cli.md  console.md  deployment.md  document-layout.md  extending-fields.md  file-manager.md  form-ux.md  geo-data.md  getting-started.md  ide-typing.md  index.md  inheritance.md  mail-compose.md  migrations.md  models.md  module-loading.md  modules.md  multi-database.md  navigation.md  one2many-forms.md  report-builder.md  security.md  vellum-design.md  vellum.md  views.md  web-layer.md  workflow.md
docs/adr/: 001-sqlalchemy-core.md
docs/api/: actions.md  automation.md  builders.md  cli.md  cron.md  depends.md  domain.md  env.md  fields.md  index.md  loader.md  mail.md  model.md  registry.md  render.md  types.md  vellum.md  views.md  web.md
docs/releases/: v0.10.0.md  v0.11.0.md  v0.12.0.md  v0.13.0.md  v0.14.0.md  v0.15.0.md  v0.15.1.md  v0.16.0.md  v0.17.0.md  v0.18.0.md  v0.19.0.md  v0.2.0.md  v0.2.1.md  v0.2.10.md  v0.2.2.md  v0.2.3.md  v0.2.4.md  v0.2.5.md  v0.2.6.md  v0.2.7.md  v0.2.8.md  v0.2.9.md  v0.20.0.md  v0.20.1.md  v0.20.2.md  v0.21.0.md  v0.22.0.md  v0.22.1.md  v0.23.0.md  v0.24.0.md  v0.24.1.md  v0.25.0.md  v0.26.0.md  v0.26.1.md  v0.26.2.md  v0.3.0.md  v0.4.0.md  v0.5.0.md  v0.6.0.md  v0.7.0.md  (+2 more)
examples/: basic.py  pyvelm.toml  seed.py  serve.py  vellum_smoke.py
examples/modules/admin/: __pyvelm__.py  hooks.py
examples/modules/base/: __pyvelm__.py  hooks.py
examples/modules/crm/: __pyvelm__.py  hooks.py
examples/modules/feedback_signals/: __pyvelm__.py  analysis.py  analytics.py  background_analysis.py  hooks.py  interpret.py  llm_analysis.py  llm_circuit.py  openrouter_circuit.py  signals_cache.py  training_examples.py  web.py  workflow_seed.py
examples/modules/partners/: __pyvelm__.py  hooks.py
examples/modules/partners_pro/: __pyvelm__.py  hooks.py
examples/modules/vellum_demo/: __pyvelm__.py  hooks.py
examples/modules_demo/demo/: __pyvelm__.py  hooks.py
pyvelm/: __init__.py  actions.py  automation.py  branding.py  builders.py  cli.py  console.py  cron.py  database.py  database_routing.py  db_autogen.py  domain.py  env.py  fields.py  file_icons.py  file_size.py  fonts.py  geo_utils.py  home.py  html_sanitizer.py  icons.py  image_meta.py  loader.py  mail.py  mail_chatter.py  mail_compose.py  mail_template.py  mail_template_fields.py  mail_template_render.py  mail_tracking.py  menu.py  migrate_cli.py  model.py  paths.py  policy.py  registry.py  render.py  request_env.py  runtime.py  scaffold_generators.py  (+11 more)
pyvelm/modules/admin/: __pyvelm__.py
pyvelm/modules/base/: __pyvelm__.py  constants.py  hooks.py  web.py
pyvelm/modules/console/: __pyvelm__.py
pyvelm/modules/document_layout/: __init__.py  __pyvelm__.py  api.py  constants.py  hooks.py  layout.py  pdf.py  web.py  widgets.py
pyvelm/modules/file_manager/: __pyvelm__.py  hooks.py
pyvelm/modules/geo_data/: __pyvelm__.py  hooks.py  web.py
pyvelm/modules/mail_compose/: __pyvelm__.py  hooks.py
pyvelm/modules/reports/: __pyvelm__.py  hooks.py
pyvelm/modules/technical/: __pyvelm__.py  hooks.py
pyvelm/modules/vellum/: __pyvelm__.py
pyvelm/modules/workflow/: __pyvelm__.py  (+1 more)
pyvelm/policies/: __init__.py  management.py  workflow.py
pyvelm/reports/: __init__.py  compile.py  compile_collections.py  execute.py  export_pdf.py  export_xlsx.py  fields_api.py  format.py  scheduler.py  schema.py  secure.py  service.py
pyvelm/scaffolds/: __init__.py  command.py.template
pyvelm/static/: pv_code_editor.css  pv_datetime_picker.js  pv_html_editor.css  pv_o2m_grid.js  pyvelm.css  tailwind.css
pyvelm/templates/: _chatter_panel.html  _chatter_panel_inner.html  _form_activity_aside.html  _form_field_grid.html  _kanban_card.html  _pv_files_alpine.html  _pv_kanban_alpine.html  _pv_list_alpine.html  _pv_search_toolbar.html  _record_pager.html  _view_switcher.html  _workflow_bar.html  _workflow_timeline.html  access_denied.html  account_profile.html  admin.html  admin_password_reset.html  apps.html  apps_detail.html  dashboard.html  error.html  file_manager_library.html  file_manager_properties.html  file_manager_upload.html  file_manager_upload_panel.html  form.html  form_body.html  graph.html  kanban.html  kanban_body.html  kanban_cards.html  landing.html  list.html  list_pagination.html  list_row.html  list_row_edit.html  list_rows.html  list_table.html  login.html  password.html  (+6 more)
pyvelm/tests/: _isolation.py  _mail.py  conftest.py  test_actions.py  test_apps_catalog.py  test_apps_catalog_gating.py  test_automation_more.py  test_base_hooks_more.py  test_branding.py  test_breadcrumbs.py  test_cli_more.py  test_console.py  test_console_commands.py  test_console_commands_more.py  test_coverage_core_more.py  test_coverage_units.py  test_cron.py  test_dashboard.py  test_database.py  test_database_routing.py  test_datetime_pickers.py  test_db_autogen_constraints.py  test_db_autogen_more.py  test_db_cli.py  test_display_name.py  test_document_layout_all.py  test_document_layout_coverage.py  test_domain.py  test_domain_more.py  test_fields_more.py  test_file_manager.py  test_file_size.py  test_fonts.py  test_form_notebook.py  test_form_save_toast.py  test_geo_data.py  test_home.py  test_html_sanitizer.py  test_http_smoke.py  test_icons.py  (+51 more)
pyvelm/vellum/: __init__.py  _metadata.py  _subclass.py  attribute.py  collection.py  counts.py  eager.py  events.py  fillable.py  mixin.py  query.py  relations.py  scope.py  soft_delete.py  timestamps.py
pyvelm/widgets/: __init__.py  datetime_pickers.py
pyvelm/workflow/: __init__.py  engine.py  escalation.py  history.py  inbox.py  runtime.py  schema.py  service.py
scripts/: extract_changelog.py  github_release.sh  tag_release.sh  test_o2m_addrow.py  vercel-build.sh
(+216 files in other folders)
