[project]
name = "pyvelm"
version = "0.2.6"
description = "Odoo-style ERP framework — recordsets, declarative models, env-bound cache."
requires-python = ">=3.10"
dependencies = [
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    "python-dotenv>=1.0",
    "fastapi>=0.115",
    "httpx>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.18",
    "bcrypt>=4.2",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
]

[project.scripts]
pyvelm = "pyvelm.cli:main"
# Legacy entry — `pyvelm cron` is the canonical form going forward.
# Kept so existing docker-compose / systemd configs survive upgrades
# without edits.
pyvelm-cron = "pyvelm.cli:cron_main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pyvelm*"]
exclude = ["examples*", "tests*"]

[tool.setuptools.package-data]
pyvelm = [
    "templates/*.html",
    "templates/**/*.html",
    "static/*.css",
    "static/dist/*",
    # Bundled modules. The directory deliberately has no __init__.py
    # so `pyvelm.modules.<name>` is NOT importable — the loader picks
    # up each module via sys.path injection on `pyvelm/modules/`, the
    # same path it uses for example addons.
    "modules/**/*.py",
    "modules/**/__pyvelm__.py",
    # Scaffolder templates materialised by `pyvelm init` / `pyvelm new`.
    # The `dot*` prefix is the rename-on-copy convention — see
    # pyvelm/scaffolder.py for the substitution rules.
    "scaffolds/**/*",
    "scaffolds/snippets/**/*",
]
