[project]
name = "pyvelm"
version = "0.22.1"
description = "PyVELM — declarative Python ERP: Odoo recordsets & modules, Laravel/Filament ergonomics, unique Tailwind admin shell."
readme = "README.md"
license = "LGPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = [
    "erp",
    "odoo",
    "laravel",
    "filament",
    "tailwind",
    "framework",
    "postgresql",
    "fastapi",
    "htmx",
    "orm",
    "recordset",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    "python-dotenv>=1.0",
    "fastapi>=0.115",
    "httpx>=0.27",
    "jinja2>=3.1",
    "heroicons[jinja]>=2.14",
    "python-multipart>=0.0.18",
    "bcrypt>=4.2",
    "uvicorn>=0.29",
    "openpyxl>=3.1",
    "fpdf2>=2.7",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
]
# Required by the `geo_data` bundled module — kept optional so the
# wheel stays small for apps that don't need geography seed data.
# Install with `pip install pyvelm[geo]` before installing the module
# from Apps.
geo = [
    "pycountry>=24.6",
    "geonamescache>=2.0",
]
test = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
]

[project.urls]
Homepage = "https://github.com/coolsam726/pyvelm"
Documentation = "https://coolsam726.github.io/pyvelm/"
Repository = "https://github.com/coolsam726/pyvelm"
Changelog = "https://github.com/coolsam726/pyvelm/blob/main/CHANGELOG.md"
Issues = "https://github.com/coolsam726/pyvelm/issues"
Sponsor = "https://github.com/sponsors/coolsam726"

[project.scripts]
pyvelm = "pyvelm.cli:main"
# Legacy entry — `pyvelm cron` is the canonical form going forward.
# Kept so existing docker-compose / systemd configs survive upgrades
# without edits.
pyvelm-cron = "pyvelm.cli:cron_main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pyvelm*"]
exclude = ["examples*", "tests*"]

[tool.setuptools.package-data]
pyvelm = [
    "py.typed",
    "templates/*.html",
    "templates/**/*.html",
    "static/*.css",
    "static/*.js",
    "static/dist/*",
    # Bundled modules. The directory deliberately has no __init__.py
    # so `pyvelm.modules.<name>` is NOT importable — the loader picks
    # up each module via sys.path injection on `pyvelm/modules/`, the
    # same path it uses for example addons.
    "modules/**/*.py",
    "modules/**/__pyvelm__.py",
    # Scaffolder templates materialised by `pyvelm init` / `pyvelm new`.
    # The `dot*` prefix is the rename-on-copy convention — see
    # pyvelm/scaffolder.py for the substitution rules.
    "scaffolds/**/*",
    "scaffolds/snippets/**/*",
]

[tool.pytest.ini_options]
testpaths = ["pyvelm/tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["pyvelm"]
omit = [
    "pyvelm/tests/*",
    "pyvelm/modules/*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
